<resources>

    <string name="app_name">Rolling</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="wait">Please, wait…</string>
    <string name="date_time_format">dd/MM/yyyy HH:mm</string>
    <string name="date_time_mask">##/##/#### ##:##</string>
    <string name="error_login">Unable to login</string>
    <string name="error_image">Unable to load image</string>
    <string name="error_network">Unable to connect</string>
    <string name="error_load_trip">Unable to load trip</string>
    <string name="error_load_user">Unable to load users</string>
    <string name="error_update_trip">Unable to update trip</string>
    <string name="error_update_profile">Unable to update profile</string>
    <string name="error_google_autocomplete_widget">Cannot open Google Places</string>

    <!-- MAIN ACTIVITY -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_description">Navigation header</string>
    <string name="navigation_trip_list">Road Trip</string>
    <string name="navigation_trip_current">Current Trip</string>
    <string name="navigation_profile">My Profile</string>
    <string name="navigation_logout">Log out</string>
    <string name="navigation_login">Log in</string>

    <!-- TRIP LIST FRAGMENT -->
    <string name="navigation_recent">Recent Posts</string>
    <string name="navigation_marked">My Trips</string>
    <string name="menu_search">Search trip…</string>
    <string name="trip_item_image_description">trip placeholder image</string>
    <string name="trip_item_create">Create a new Trip</string>
    <string name="trip_item_start_label">from</string>
    <string name="trip_item_end_label">to</string>
    <string name="trip_list_empty_label_1">Mark some interesting trip as\n\'My Trip\'\nby clinking</string>
    <string name="trip_list_empty_label_2">at the trip details page</string>
    <string name="trip_list_empty_label_3">Empty result</string>

    <!-- PROFILE FRAGMENT -->
    <string name="profile_name_placeholder">Name</string>
    <string name="profile_email_placeholder">E-mail</string>
    <string name="profile_password_placeholder">Password</string>
    <string name="profile_password_action">CHANGE PASSWORD</string>
    <string name="profile_avatar_description">profile avatar</string>
    <string name="profile_avatar_chooser_title">Select an image as your avatar</string>
    <string name="profile_dialog_password_title">Change password</string>
    <string name="profile_dialog_password_label">Confirm your old password</string>

    <!-- TRIP ACTIVITY -->
    <string name="trip_title">New Trip</string>
    <string name="menu_trip_save">SAVE</string>
    <string name="trip_distance_hint">Provide start and endpoint</string>
    <string name="trip_distance_format">%1$,.2f Km</string>
    <string name="trip_break_point_remove">Remove</string>
    <string name="menu_trip_marked">Add as My Trip</string>
    <string name="error_save_trip_title">Invalid title</string>
    <string name="error_save_trip_date">Invalid date</string>
    <string name="error_save_trip_start">Invalid starter place</string>
    <string name="error_save_trip_end">Invalid destination place</string>
    <string name="error_save_trip_distance">Invalid distance</string>
    <string name="error_save_trip_duration">Invalid duration</string>
    <string name="error_save_trip">Invalid trip</string>
    <string-array name="trip_duration_types">
        <item>days</item>
        <item>hours</item>
    </string-array>

    <!-- TRIP FRAGMENT -->
    <string name="trip_action_add_image">add a trip banner</string>
    <string name="trip_title_placeholder">Trip Title</string>
    <string name="trip_duration_placeholder">Trip Duration</string>
    <string name="trip_distance_placeholder">Trip Distance</string>
    <string name="trip_date_placeholder">Date and hour of Trip</string>
    <string name="trip_hint_start">Starter point</string>
    <string name="trip_hint_destination">Destination</string>
    <string name="trip_break_point_label">Breakpoints</string>
    <string name="trip_map_label">Map</string>
    <string name="trip_item_break_point_create">Add a Break Point</string>

    <!-- CURRENT TRIP FRAGMENT -->
    <string name="menu_current_remove">Remove as Current</string>
    <string name="trip_current_empty_label_1">Create a shortcut to your\n\'Current Trip\'\nby clinking</string>
    <string name="trip_current_empty_label_2">at the trip details page</string>
    <string name="trip_current_removed">Trip removed as current</string>

    <!-- TRIP DETAILS ACTIVITY -->
    <string name="details_banner">trip banner</string>
    <string name="details_item_person_avatar">person avatar</string>
    <string name="details_current_success">Trip marked as current</string>
    <string name="details_description_share">share trip</string>
    <string name="details_description_current">mark trip as current</string>
    <string name="success_create_trip">Trip successfully created</string>
    <string name="error_create_trip">Unable to crate Trip</string>
    <string name="error_create_trip_date">Invalid date and time</string>
    <plurals name="details_resume_persons">
        <item quantity="one">%d person confirm participation</item>
        <item quantity="other">%d persons confirm participation</item>
    </plurals>
    <string-array name="details_tab_titles">
        <item>Trip</item>
        <item>Persons</item>
    </string-array>

    <!-- WIDGET -->
    <string name="widget_default_title">Current Trip</string>
    <string name="widget_empty_label">Mark a Trip as Current clicking at the button</string>

    <!-- SHARE -->
    <string name="schema">http</string>
    <string name="host">rolling.app</string>
    <string name="path_main">/</string>
    <string name="path_details">/trip</string>
    <string name="share_title">Share a trip</string>

</resources>
