<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_trip_list"
            android:title="@string/navigation_trip_list"
            android:icon="@drawable/ic_trip_list" />

        <item
            android:id="@+id/navigation_trip_current"
            android:title="@string/navigation_trip_current"
            android:icon="@drawable/ic_trip_current" />

        <item
            android:id="@+id/navigation_profile"
            android:title="@string/navigation_profile"
            android:icon="@drawable/ic_profile" />

    </group>

    <group
        android:id="@+id/menu_group_auth"
        android:checkableBehavior="none">

        <item
            android:id="@+id/navigation_logout"
            android:title="@string/navigation_logout"
            android:icon="@drawable/ic_logout" />

        <item
            android:id="@+id/navigation_login"
            android:title="@string/navigation_login"
            android:icon="@drawable/ic_login" />

    </group>

</menu>
