<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/dialog_password_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="24dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="bottom"
                android:text="@string/profile_dialog_password_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/dialog_password_input"
                android:text="@string/profile_dialog_password_label" />

            <EditText
                android:id="@+id/dialog_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_password_action"
            android:layout_below="@+id/dialog_password_body"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:gravity="end|center_vertical">

            <Button
                android:id="@+id/dialog_password_action_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="?android:borderlessButtonStyle" />

            <Button
                android:id="@+id/dialog_password_action_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                style="?android:borderlessButtonStyle" />

        </LinearLayout>

    </RelativeLayout>

</layout>
