<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.trip.TripFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/trip_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/primary_light"
            android:contentDescription="@string/trip_action_add_image"
            app:srcCompat="@drawable/ic_picture"/>

        <RelativeLayout
            android:id="@+id/trip_editable_content"
            android:layout_below="@+id/trip_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/trip_title_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/trip_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_title_placeholder"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/trip_start"
                android:layout_below="@+id/trip_title_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:drawablePadding="8dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/trip_hint_start"
                android:drawableEnd="@drawable/ic_map"
                android:background="?android:selectableItemBackground" />

            <TextView
                android:id="@+id/trip_destination"
                android:layout_below="@+id/trip_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:drawablePadding="8dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/trip_hint_destination"
                android:drawableEnd="@drawable/ic_map"
                android:background="?android:selectableItemBackground" />

        </RelativeLayout>

        <View
            android:id="@+id/trip_divider"
            android:layout_below="@+id/trip_editable_content"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/trip_break_points_label"
            android:layout_below="@+id/trip_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/secondary_text"
            android:text="@string/trip_break_point_label" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trip_list_break_points"
            android:layout_below="@+id/trip_break_points_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="250dp" />

    </RelativeLayout>

</layout>