<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.trip.TripActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/trip_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/trip_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/primary_light"
                    android:contentDescription="@string/trip_action_add_image"
                    app:srcCompat="@drawable/ic_picture"/>

                <RelativeLayout
                    android:id="@+id/trip_editable_content"
                    android:layout_below="@+id/trip_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/trip_title_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/trip_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:hint="@string/trip_title_placeholder"
                            android:inputType="textCapWords" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/trip_duration_placeholder"
                        android:layout_below="@+id/trip_title_placeholder"
                        android:layout_toStartOf="@+id/trip_duration_type"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/trip_duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/trip_duration_placeholder"
                            android:inputType="numberDecimal" />

                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/trip_duration_type"
                        android:layout_alignBottom="@+id/trip_duration_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:layout_alignParentEnd="true"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/trip_distance_placeholder"
                        android:layout_below="@+id/trip_duration_placeholder"
                        android:layout_toStartOf="@+id/trip_distance_type"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/trip_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/trip_distance_placeholder"
                            android:inputType="numberDecimal" />

                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/trip_distance_type"
                        android:layout_alignBottom="@+id/trip_distance_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:layout_alignParentEnd="true"/>

                    <TextView
                        android:id="@+id/trip_date_label"
                        android:layout_below="@+id/trip_distance_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp"
                        android:textColor="@color/secondary_text"
                        android:text="@string/trip_date_placeholder"/>

                    <TextView
                        android:id="@+id/trip_date_picker"
                        android:layout_below="@+id/trip_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="@color/secondary_text"
                        android:text="@string/trip_date_picker_placeholder"
                        android:background="?android:selectableItemBackground" />

                    <TextView
                        android:id="@+id/trip_hour_picker"
                        android:layout_alignTop="@+id/trip_date_picker"
                        android:layout_toEndOf="@+id/trip_date_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/trip_hour_picker_placeholder"
                        android:textColor="@color/secondary_text"
                        android:background="?android:selectableItemBackground" />

                    <TextView
                        android:id="@+id/trip_start"
                        android:layout_below="@+id/trip_date_picker"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:hint="@string/trip_hint_start"
                        android:drawableEnd="@drawable/ic_map"
                        android:background="?android:selectableItemBackground" />

                    <TextView
                        android:id="@+id/trip_destination"
                        android:layout_below="@+id/trip_start"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginBottom="8dp"
                        android:drawablePadding="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:hint="@string/trip_hint_destination"
                        android:drawableEnd="@drawable/ic_map"
                        android:background="?android:selectableItemBackground" />

                </RelativeLayout>

                <View
                    android:id="@+id/trip_divider_1"
                    android:layout_below="@+id/trip_editable_content"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/trip_break_points_label"
                    android:layout_below="@+id/trip_divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/secondary_text"
                    android:text="@string/trip_break_point_label" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trip_list_break_points"
                    android:layout_below="@+id/trip_break_points_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_break_point"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                <View
                    android:id="@+id/trip_divider_2"
                    android:layout_below="@+id/trip_list_break_points"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/trip_map_label"
                    android:layout_below="@+id/trip_divider_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/secondary_text"
                    android:text="@string/trip_map_label" />

                <fragment
                    android:id="@+id/trip_map_fragment"
                    android:layout_below="@+id/trip_map_label"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:name="com.google.android.gms.maps.MapFragment" />

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
